--- a/style.css
+++ b/style.css
@@ -14,10 +14,20 @@
 
   /*FONTS*/
   /*font-family*/
+  --ff-heading: "Young Serif", serif;
+  --ff-primary: "Outfit", sans-serif;
 
   /*font-sizes*/
+  --fs-400: 1rem;
+  --fs-500: 1.25rem;
+  --fs-600: 1.75rem;
+  --fs-700: 2.25rem;
+  --fs-800: 2.5rem;
 
   /*font-weights*/
+  --fw-normal: 400;
+  --fw-bold: 600;
+  --fw-boldest: 700;
 }
 
 *,
